    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.

      \item \command{R CMD Sd2Rd} is defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Dummy
    }
  }
}

\section{CHANGES IN R VERSION 2.12.0 patched}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{seq.int} no longer sometimes evaluates arguments
      twice.  (\PR{14388})
      
      \item The \code{data.frame} method of \code{format} failed if a
      column name was longer than 256 bytes (the maximum length allowed
      for an \R name).

      \item Reference class methods using \code{callSuper()} now work
        when installed by invoking \code{methods()} on the generator.
    }
  }
}

\section{CHANGES IN R VERSION 2.12.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Reading a packages's \file{CITATION} file now defaults to
       ASCII rather than Latin-1: a package with a non-ASCII
       \file{CITATION} file should declare an encoding in its
       \file{DESCRIPTION} file and use that encoding for the
       \file{CITATION} file.

      \item \code{difftime()} now defaults to the \code{"tzone"}
       attribute of \code{"POSIXlt"} objects rather than to the current
       timezone as set by the default for the \code{tz} argument.  (Wish
       of \PR{14182}.)

      \item \code{pretty()} is now generic, with new methods for
       \code{"Date"} and \code{"POSIXt"} classes (based on code
       contributed by Felix Andrews).

      \item \code{unique()} and \code{match()} are now faster on
       character vectors where all elements are in the global \code{CHARSXP}
       cache and have unmarked encoding (ASCII).  Thanks to Matthew
       Dowle for suggesting improvements to the way the hash code is
       generated in \file{unique.c}.
